# comet-clib

./: .gitignore  CMakeLists.txt  README.md  lib.h  main.c  ship.sh  test.h
lib/: CMakeLists.txt  graph.c  hashmap.c  iterator_internal.h  lib.h  log.c  memory_lens.c  optional.c  optional_internal.h  optionals.c  optionals_internal.h  str.c  string.c  string_internal.h  vec.c  vec_internal.h
tests/: hashmap.c  main.c  str.c
